<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.faruqisan.coding.smsgateway2.SMSAutoReply">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelAutoRepSettings"
        android:id="@+id/buttonAutoRepSettings"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelAutoRepStop"
        android:id="@+id/buttonAutoRepStop"
        android:layout_above="@+id/buttonAutoRepSettings"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelAutoRepStart"
        android:id="@+id/buttonAutoRepStart"
        android:layout_above="@+id/buttonAutoRepStop"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/buttonAutoRepStop" />


</RelativeLayout>
