<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SMSGatewayLabel"
        android:id="@+id/buttonSMSGateway"
        android:onClick="openServer"
        android:layout_above="@+id/buttonSMSAutoReply"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="1dp"
        android:layout_alignParentLeft="true"
        android:textColor="#ff3fa3c9" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AutoReplyLabel"
        android:id="@+id/buttonSMSAutoReply"
        android:layout_above="@+id/buttonAbout"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="1dp"
        android:layout_alignRight="@+id/buttonAbout"
        android:textColor="#ff3fa3c9"
        android:onClick="openAutoReply" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AboutLabel"
        android:id="@+id/buttonAbout"

        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/buttonSMSGateway"
        android:layout_alignParentRight="true"
        android:textColor="#ff3fa3c9" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/prodase2"
        android:cropToPadding="false"
        android:layout_marginTop="38dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
